--- a/gradle.properties
+++ b/gradle.properties
@@ -5,6 +5,7 @@ projectVersion=1.0.0
 
 moduleDocsPath=./docs/module.md
 
-kotlinVersion=1.7.20
+kotlinVersion=1.8.0
+dokkaVersion=1.7.20
 
-ktorVersion=2.1.3
+ktorVersion=2.2.1
